# kwando

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README-en.md  README-pt-br.md  README.md  add_tags.py  app.py  cleanup_csv_files.py  dashboard.py  index.html  justfile  main.py  monte_carlo.py  panel_monte_carlo_dashboard.ipynb  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: e2e-tests.yml  release.yml  security.yml  test.yml
.ipynb_checkpoints/: panel_monte_carlo_dashboard-checkpoint.ipynb  panel_monte_carlo_period_dashboard-checkpoint.ipynb
binder/: README.md  environment.yml  postBuild  start
data/: .throughput_values.txt  data1.csv  data2.csv  data2_with_tags.csv  data3.csv  data_with_tags.csv
data/backup/: data2.csv
docs/: about.md  e2e_testing.md  monte_carlo_help.md
openspec/changes/add-direct-throughput-input/: proposal.md
openspec/changes/archive/2025-12-03-add-direct-throughput-input/: design.md  tasks.md
openspec/changes/archive/2025-12-03-add-direct-throughput-input/specs/forecasting/: spec.md
openspec/changes/archive/2025-12-03-convert-to-throughput-forecasting/: design.md  tasks.md
openspec/changes/archive/2025-12-03-remove-csv-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-03-remove-csv-support/specs/forecasting/: spec.md
openspec/changes/convert-to-throughput-forecasting/: proposal.md
openspec/changes/convert-to-throughput-forecasting/specs/forecasting/: spec.md
openspec/specs/forecasting/: spec.md
scripts/: run_e2e_tests.py
src/: dashboard.py  monte_carlo.py
tests/: test_monte_carlo.py
tests/e2e/: test_dashboard.py
