[project]
name = "wwibd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "jupyter>=1.1.1",
    "numpy>=2.3.1",
    "panel>=1.7.4",
    "scipy>=1.16.0",
    "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = "src"
