[project]
name = "wwibd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "jupyter>=1.1.1",
    "numpy>=2.3.1",
    "pandas>=2.0.0",
    "panel>=1.7.4",
    "scipy>=1.16.0",
    "tabulate>=0.9.0",
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "pre-commit>=3.0.0", "pytest>=8.0.0", "pandas>=2.0.0"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = "src"

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
